objects/ssot__ServiceRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClosedDateTime__c</fullName>
        <label>Closed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Service Request Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <label>Is Closed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProcessDefinitionId__c</fullName>
        <label>Service Process Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmitterId__c</fullName>
        <label>Submitter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009518364_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceRequest_SubmitterId_map_User__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ServiceRequest_SubmitterId_map_User__rel</relationshipLabel>
        <relationshipName>rel_1702009518364_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009518992_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceRequest_ServiceProcessDefinit_rel</label>
        <referenceTo>ssot__ServiceProcessDefinition__dlm</referenceTo>
        <relationshipLabel>ServiceRequest_ServiceProcessDefinit_rel</relationshipLabel>
        <relationshipName>rel_1702009518992_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>